--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         ------------------------->
 
         <div id="mission">
-            <i class="fa-solid fa-circle-xmark" onclick="hideMissionVision()"></i>
+            <i class="fa-solid fa-circle-xmark"></i>
                 <div class="mission-content">
                     <h1 id="mission-heading">Our &nbsp;Mission</h1>
                     <p id="mission-paragraph">
@@ -79,7 +79,6 @@
                         <iframe width="853" height="480" src="https://www.youtube.com/embed/uukmHfraa68" title="UFAZ New Scientific Laboratories" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
-            <i class="fa-solid fa-circle-xmark" id="bottom-xmark" onclick="hideMissionVision()"></i>
         </div>  <!--Mission&Vision Pop-up page's code ends here-->
 
     <!---------------------------------- 
