--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navBar">
             <a href="index.html"><img src="./images/logo-alternative.png"></a> 
             <div class="nav-links" id="navLinks">
-                <i class="fa-solid fa-square-xmark" onclick="hideMenu()"></i>
+                <i class="fa-solid fa-square-xmark"></i>
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">FACULTIES</a></li>
@@ -34,7 +34,7 @@
                     <li><a href="#footer">CONTACT</a></li>
                 </ul>
             </div>
-            <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+            <i class="fa-solid fa-bars"></i>
         </nav>
         <!-- Entire Navigation ends here -->
 
